--- a/src/app/features/crm/components/messaging-template/messaging-template.component.html
+++ b/src/app/features/crm/components/messaging-template/messaging-template.component.html
@@ -1,12 +1,14 @@
 <div class="base-content-section">
   <div class="me-4">
-    <app-dynamic-breadcrumb [breadCrumbItems]="messagingTemplateBreadCrumbItems">
+    <app-dynamic-breadcrumb
+      [breadCrumbItems]="messagingTemplateBreadCrumbItems"
+    >
     </app-dynamic-breadcrumb>
   </div>
   <div class="me-4">
     <div class="card mb-3">
       <div class="card-body">
-        <p class="mt-3 light-bold">{{ 'crm.system' | translate }}</p>
+        <p class="mt-3 light-bold">{{ "crm.system" | translate }}</p>
         <div class="form-div px-3">
           <form>
             <div class="row">
@@ -17,19 +19,19 @@
                       class="form-check-input select-system"
                       type="radio"
                       name="system"
-                      value="{{system.id}}"
+                      value="{{ system.id }}"
                       (click)="selectSystem(system)"
-                      [checked]="selectedSystem?.id===system.id"
-                    >
-                    <label class="form-check-label" for="{{system.id}}">{{ system.systemName }}</label>
+                      [checked]="selectedSystem?.id === system.id"
+                    />
+                    <label class="form-check-label" for="{{ system.id }}">{{
+                      system.systemName
+                    }}</label>
                   </div>
                 </div>
               </ng-container>
             </div>
           </form>
         </div>
-
-
       </div>
     </div>
 
@@ -37,20 +39,34 @@
       <div class="card-body">
         <div class="row">
           <div class="col-sm-3">
-            <span class="light-bold mt-3">{{ 'crm.messaging_template' | translate }}</span>
+            <span class="light-bold mt-3">{{
+              "crm.messaging_template" | translate
+            }}</span>
           </div>
           <div class="col-sm-9">
             <div class="row mt-3 float-end">
-            <span class="icon-circle" data-bs-toggle="modal" data-bs-target="#templateModal">
-              <i class="fa-solid fa-plus"></i>
-            </span>
+              <span
+                class="icon-circle"
+                data-bs-toggle="modal"
+                data-bs-target="#templateModal"
+              >
+                <i class="fa-solid fa-plus"></i>
+              </span>
               <span class="icon-circle"><i class="pi pi-pencil"></i></span>
-              <span class="icon-circle"><i class="fa-regular fa-trash-can"></i></span>
+              <span class="icon-circle"
+                ><i class="fa-regular fa-trash-can"></i
+              ></span>
             </div>
           </div>
         </div>
         <div class="row mt-3">
-          <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
+          <ngx-spinner
+            type="ball-clip-rotate-multiple"
+            [fullScreen]="false"
+            color="#00529B"
+            size="medium"
+            bdColor="rgba(255, 255, 255, 0.966)"
+          ></ngx-spinner>
           <p-table
             [value]="messageTemplates"
             [paginator]="true"
@@ -67,19 +83,25 @@
           >
             <ng-template pTemplate="header">
               <tr>
-                <th>{{ 'crm.message' | translate }}</th>
-                <th style="width:20%">{{ 'crm.subject' | translate }}</th>
-                <th style="width:50%">{{ 'crm.message_content' | translate }}</th>
-                <th>{{ 'crm.system_module' | translate }}</th>
-                <th>{{ 'crm.type' | translate }}</th>
-                <th>{{ 'crm.active' | translate }}</th>
+                <th>{{ "crm.message" | translate }}</th>
+                <th style="width: 20%">{{ "crm.subject" | translate }}</th>
+                <th style="width: 50%">
+                  {{ "crm.message_content" | translate }}
+                </th>
+                <th>{{ "crm.system_module" | translate }}</th>
+                <th>{{ "crm.type" | translate }}</th>
+                <th>{{ "crm.active" | translate }}</th>
               </tr>
             </ng-template>
             <ng-template pTemplate="body" let-template>
               <tr>
                 <td>{{ template.name }}</td>
-                <td>{{ template.subject }}</td>
-                <td>{{ template.content }}</td>
+                <td pTooltip="{{ template.subject }}" tooltipPosition="top">
+                  {{ sliceString(template.subject) }}
+                </td>
+                <td pTooltip="{{ template.content }}" tooltipPosition="top">
+                  {{ sliceString(template.content) }}
+                </td>
                 <td>{{ template.systemModule }}</td>
                 <td>{{ template.templateType }}</td>
                 <td>{{ template.active }}</td>
@@ -92,61 +114,115 @@
   </div>
 </div>
 
-
-
 <!-- New Template Modal -->
-<div class="modal fade" id="templateModal" tabindex="-1" aria-labelledby="templateModalLabel" aria-hidden="true">
+<div
+  class="modal fade"
+  id="templateModal"
+  tabindex="-1"
+  aria-labelledby="templateModalLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="templateModalLabel">{{ 'crm.define_template' | translate }}</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h1 class="modal-title fs-5" id="templateModalLabel">
+          {{ "crm.define_template" | translate }}
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
       </div>
       <div class="modal-body">
-
         <form [formGroup]="templateForm">
           <div class="mb-3">
-            <label for="message" class="form-label">{{ 'crm.name' | translate }}</label>
-            <input type="text" class="form-control" id="message" formControlName="name">
+            <label for="message" class="form-label">{{
+              "crm.name" | translate
+            }}</label>
+            <input
+              type="text"
+              class="form-control"
+              id="message"
+              formControlName="name"
+            />
           </div>
           <div class="mb-3">
-            <label for="subject" class="form-label">{{ 'crm.subject' | translate }}</label>
-            <input type="text" class="form-control" id="subject" formControlName="subject">
+            <label for="subject" class="form-label">{{
+              "crm.subject" | translate
+            }}</label>
+            <input
+              type="text"
+              class="form-control"
+              id="subject"
+              formControlName="subject"
+            />
           </div>
           <div class="mb-3">
-            <label for="content" class="form-label">{{ 'crm.template_content' | translate }}</label>
-            <textarea class="form-control" id="content" rows="3" formControlName="content"></textarea>
+            <label for="content" class="form-label">{{
+              "crm.template_content" | translate
+            }}</label>
+            <textarea
+              class="form-control"
+              id="content"
+              rows="3"
+              formControlName="content"
+            ></textarea>
           </div>
           <div class="mb-3">
-            <label for="content" class="form-label">{{ 'crm.system_module' | translate }}</label>
-            <select class="form-select" aria-label="Default select example" formControlName="systemModule">
+            <label for="content" class="form-label">{{
+              "crm.system_module" | translate
+            }}</label>
+            <select
+              class="form-select"
+              aria-label="Default select example"
+              formControlName="systemModule"
+            >
               <ng-container *ngFor="let s of systemModules">
-                <option value="{{ s.systemId }}">{{ s.shortDescription }}</option>
+                <option value="{{ s.systemId }}">
+                  {{ s.shortDescription }}
+                </option>
               </ng-container>
             </select>
           </div>
           <div class="mb-3">
             <label for="content" class="form-label">Type</label>
-            <select class="form-select" aria-label="Default select example" formControlName="templateType">
-              <option value="EMAIL">{{ 'crm.email' | translate }}</option>
-              <option value="SMS">{{ 'crm.sms' | translate }}</option>
+            <select
+              class="form-select"
+              aria-label="Default select example"
+              formControlName="templateType"
+            >
+              <option value="EMAIL">{{ "crm.email" | translate }}</option>
+              <option value="SMS">{{ "crm.sms" | translate }}</option>
             </select>
           </div>
           <div class="mb-3">
-            <label for="content" class="form-label">{{ 'crm.active' | translate }}</label>
-            <select class="form-select" aria-label="Default select example" formControlName="status">
+            <label for="content" class="form-label">{{
+              "crm.active" | translate
+            }}</label>
+            <select
+              class="form-select"
+              aria-label="Default select example"
+              formControlName="status"
+            >
               <ng-container *ngFor="let s of status">
                 <option value="{{ s.value }}">{{ s.name }}</option>
               </ng-container>
             </select>
           </div>
         </form>
-
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" (click)="saveTemplate()" id="save-template">{{ 'crm.save_details' | translate }}</button>
+        <button
+          type="button"
+          class="btn btn-primary"
+          (click)="saveTemplate()"
+          id="save-template"
+        >
+          {{ "crm.save_details" | translate }}
+        </button>
       </div>
     </div>
   </div>
 </div>
-
