--- a/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
@@ -554,8 +554,10 @@
                   <select id="marital_status" class="form-select form-select mb-1" id="quote-input"
                           placement="right" formControlName="marital_status">
                     <option selected="true" disabled="disabled">Select Marital Status</option>
-                    <option value="MARRIED">Married</option>
                     <option value="SINGLE">Single</option>
+                    <option value="MARRIED">Married</option>
+                    <option value="SEPARATED">Separated</option>
+                    <option value="WIDOWED">Widowed</option>
                   </select>
                 </div>
 
