--- a/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
+++ b/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
@@ -16,7 +16,7 @@
                             <label for="client" class="required product-label" id="client">{{'gis.policy.client' |
                                 translate}}</label>
                             <input type="text" id="quote-input" class="form-control form-control-sm mb-1"
-                                formControlName="clientCode" [(ngModel)]="clientName" data-bs-toggle="modal" placeholder="Select a client "
+                                formControlName="clientCode" [(ngModel)]="clientName" data-bs-toggle="modal" 
                                 data-bs-target="#clientModal" readonly  >
 
                             <!-- Display error message under the field -->
