--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -3787,8 +3787,8 @@
 
                 </ng-container>
                 <ng-container *ngIf="selectedItem === 2">
-                    <h5> {{'gis.policy.client_dd_details' | translate}}</h5>
-                    <p>Details about Client DD...</p>
+                  
+                    <app-client-dd-details></app-client-dd-details>      
                 </ng-container>
                 <ng-container *ngIf="selectedItem === 3">
                     <!-- POLICY TAXES DETAILS -->
