--- a/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
+++ b/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
@@ -59,7 +59,7 @@
                             </div>
                             <div class="col-8" id="value">
                                 <p-dropdown [options]="allMatchingSubclasses" optionValue="code" (onChange)="onSubclassSelected($event.value)"
-                                    optionLabel="description" formControlName="subClassCode" [placeholder]="'subclass'"
+                                    optionLabel="description" formControlName="subClassCode" 
                                     [filterBy]="'description'" [filter]="true"></p-dropdown>
                             </div>
                         </div>
@@ -76,12 +76,12 @@
                     <div class="col-sm-9 d-flex justify-content-end">
                         <div class="row  mb-2">
 
-                            <div class="col-sm-3 me-4">
+                            <div class="col-sm-3 me-4 ms-3">
                                 <button type="button" class="btn btn-primary" id="templateButton"
                                     (click)="downloadCSVTemplate()">{{'gis.policy.export_template' |
                                     translate}}</button>
                             </div>
-                            <div class="col-sm-3 ms-4">
+                            <div class="col-sm-3 ms-4 me-4">
                                 <!-- <button type="button" class="btn btn-primary" id="templateButton" >{{'gis.policy.upload_template' |
                                     translate}}</button> -->
                                 <!-- Hidden file input -->
@@ -124,11 +124,12 @@
 
                     </div>
                 </div>
-                <p-table dataKey="code" [value]="importedRisk" [tableStyle]="{ 'min-width': '300px' }"
-                    [paginator]="true" selectionMode="single" styleClass="p-datatable-sm" responsiveLayout="scroll"
+                <p-table [value]="importedRisk" [tableStyle]="{ 'min-width': '300px' }" [(selection)]="selectedRisks" 
+                    [paginator]="true"  styleClass="p-datatable-sm" responsiveLayout="scroll"
                     class='ui-datatable' [autoLayout]="true" [rows]="10">
                     <ng-template pTemplate="header">
                         <tr>
+                            <th style="width: 4rem"><p-tableHeaderCheckbox /></th>
                             <th>Client ID</th>
                             <th>Client name</th>
                             <th>WEF</th>
@@ -141,17 +142,19 @@
 
                         </tr>
                     </ng-template>
-                    <ng-template pTemplate="body" let-importedRisk>
+                    <ng-template pTemplate="body" let-data>
                         <tr>
-
-                            <td>{{importedRisk.INSURED_ID}}</td>
-                            <td>{{importedRisk.INSURED_NAME}}</td>
-                            <td>{{importedRisk.EFF_DATE}}</td>
-                            <td>{{importedRisk.EXP_DATE}}</td>
+                            <td>
+                                <p-tableCheckbox [value]="data" />
+                            </td>
+                            <td>{{data.INSURED_ID}}</td>
+                            <td>{{data.INSURED_NAME}}</td>
+                            <td>{{data.EFF_DATE}}</td>
+                            <td>{{data.EXP_DATE}}</td>
                             <td></td>
                             <td></td>
-                            <td>{{importedRisk.COVER_TYPE}}</td>
-                            <td>{{importedRisk.BUT_CHARGE_PREMIUM}}</td>
+                            <td>{{data.COVER_TYPE}}</td>
+                            <td>{{data.BUT_CHARGE_PREMIUM}}</td>
                             <td></td>
 
                         </tr>
@@ -163,10 +166,14 @@
                         </tr>
                     </ng-template>
                 </p-table>
+                <div class="d-flex justify-content-end mt-4">
+                    <button type="button" class="btn btn-outline-primary me-3" (click)="clear()">Clear</button>
+                    <button type="button" class="btn btn-primary" (click)="addPolicyRisk()">Load</button>
+                </div>
             </div>
         </div>
         <div class="d-flex justify-content-end mt-4">
-            <button type="button" class="btn btn-primary" (click)="previous()">{{'gis.policy.previous' |
+            <button type="button" class="btn btn-outline-primary me-3" (click)="previous()">{{'gis.policy.previous' |
                 translate}}</button>
             <button type="button" class="btn btn-primary" (click)="next()">{{'gis.policy.next' |
                 translate}}</button>
