--- a/src/app/features/gis/components/policy/components/client-dd-details/client-dd-details.component.html
+++ b/src/app/features/gis/components/policy/components/client-dd-details/client-dd-details.component.html
@@ -6,41 +6,57 @@
 
             </div>
             <div class="col-sm-8 d-flex justify-content-end">
-                <div class="row  mb-2">
+                <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editModal">
+                    <i class="fa-solid fa-pencil"></i>
+                </button>
 
-                 
-                    <div class="col-sm-3">
-                    </div>
-                    <div class="col-sm-3 " >
-                        <button type="button" id="icon" class="btn btn-primary"
-                            data-bs-toggle="modal" data-bs-target="#addCommissionTransc"
-                            title="Add">
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
-                    </div>
-                    <div class="col-3">
-                        <button type="button" id="icon" class="btn btn-primary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-
-                    </div>
-
-                    <div class="col-sm-3">
-                        <button type="button" id="icon" class="btn btn-primary"
-                            data-bs-toggle="modal" id="openCommissionModalButtonDelete"
-                            [hidden]="true" data-bs-target="#deleteCommissionTransc" title="Delete">
-                        </button>
-                        <button type="button" id="icon" class="btn btn-primary" title="Delete">
-                            <i class="fa-solid fa-trash-can"></i>
-                        </button>
-
-                    </div>
-                   
-                </div>
+              
 
             </div>
         </div>
     </div>
+    <!-- EDIT CLIENT DD DETAILS MODAL -->
+<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+       
+            
+            <div class="modal-body">
+                <button type="button" class="btn-close float-end" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h5 class="modal-title" id="modalTitle">Edit Client DD Details</h5>
+                
+                <!-- ROW 1 -->
+                <div class="row mt-4 mb-4">
+                    <div class="col-sm-6">
+                        <label for="clientName" class="form-label">Client Name</label>
+                        <input type="text" class="form-control" id="clientName" placeholder="">
+                    </div>
+                    <div class="col-sm-6">
+                        <label for="clientName" class="form-label">Account Name</label>
+                        <input type="text" class="form-control" id="clientName" placeholder="">
+                    </div>
+                </div>
+                <!-- ROW 2 --> 
+                <div class="row">
+                    <div class="col-sm-6">
+                        <label for="clientName" class="form-label">Account No.</label>
+                        <input type="text" class="form-control" id="clientName" placeholder="">
+                    </div>
+                    <div class="col-sm-6">
+                        <label for="clientName" class="form-label">Bank Branch</label>
+                        <p-dropdown formControlName="branchCode" [options]="branchList" optionLabel="name"
+                        optionValue="id" (onChange)="onBranchSelected($event.value)"
+                         [filterBy]="'description'" [filter]="true"
+                        ></p-dropdown>
+                    </div>
+                </div>
+            </div>
+        </div>
+         
+    </div>
+</div>
+   
+      
     <p-table 
     [value]=" " 
     selectionMode="single" 
