VQ-2347:Ability to edit risk clause

--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -2013,7 +2013,7 @@
                                                                 class="p-button-rounded p-button-text"></button>
                                                             <button *ngIf="editing" pButton pRipple type="button"
                                                                 pSaveEditableRow icon="pi pi-check"
-                                                                class="p-button-rounded p-button-text p-button-success mr-2"></button>
+                                                                class="p-button-rounded p-button-text p-button-success mr-2" (click)="editRiskClause(selectedClauseList)"></button>
                                                             <button *ngIf="editing" pButton pRipple type="button"
                                                                 pCancelEditableRow icon="pi pi-times"
                                                                 class="p-button-rounded p-button-text p-button-danger"></button>
