--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -585,7 +585,7 @@
                                     <ng-template pTemplate="body" let-riskDetails let-ri="rowIndex">
                                         <tr [pSelectableRow]="riskDetails"
                                             [class.p-highlight]="riskDetails === selectedRisk"
-                                            (click)="togglePremiumDetails();getRiskClauses();getRiskPeril();getSubclassPerils();getRelatedRisks();getSchedules();getCommissions()">
+                                            (click)="togglePremiumDetails();getRiskClauses();getRiskPeril();getSubclassPerils();getRelatedRisks();getSchedules();getCommissions();getallCertificates()">
                                             <td class="flexible-header">{{riskDetails.propertyId}}</td>
                                             <td class="flexible-header"></td>
                                             <td class="flexible-header">{{riskDetails.propertyDescription}}</td>
@@ -2746,8 +2746,8 @@
                                     </div>
                                     <div class="collapse" id="certificatesDetails">
 
-                                        <p-table #dt2 [value]="riskDetails" dataKey="code" selectionMode="single"
-                                            [(selection)]="selectedSchedule" [tableStyle]="{'min-width': '50rem'}"
+                                        <p-table #dt2 [value]="policyCertificateList" dataKey="code" selectionMode="single"
+                                            [(selection)]="selectedPolicyCertificate" [tableStyle]="{'min-width': '50rem'}"
                                             responsiveLayout="scroll" [autoLayout]="true" class='ui-datatable'>
 
 
@@ -2767,18 +2767,18 @@
                                                 </tr>
                                             </ng-template>
 
-                                            <ng-template pTemplate="body" let-riskDetails let-ri="rowIndex">
-                                                <tr [pSelectableRow]="riskDetails"
-                                                    [class.p-highlight]="riskDetails === selectedRisk">
-                                                    <td class="flexible-header"></td>
-                                                    <td class="flexible-header"></td>
-                                                    <td class="flexible-header"></td>
-                                                    <td class="flexible-header"></td>
-                                                    <td class="flexible-header"></td>
-                                                    <td class="flexible-header"></td>
-                                                    <td class="flexible-header"></td>
-                                                    <td class="flexible-header"></td>
-                                                    <td class="flexible-header"></td>
+                                            <ng-template pTemplate="body" let-policyCertificateList let-ri="rowIndex">
+                                                <tr [pSelectableRow]="policyCertificateList"
+                                                    [class.p-highlight]="policyCertificateList === selectedPolicyCertificate">
+                                                    <td class="flexible-header">{{policyCertificateList.lotId}}</td>
+                                                    <td class="flexible-header">{{policyCertificateList.certificateNo}}</td>
+                                                    <td class="flexible-header">{{policyCertificateList.lotId}}</td>
+                                                    <td class="flexible-header">{{policyCertificateList.issueDate}}</td>
+                                                    <td class="flexible-header">{{policyCertificateList.certificateYear}}</td>
+                                                    <td class="flexible-header">{{policyCertificateList.status}}</td>
+                                                    <td class="flexible-header">{{policyCertificateList.printStatus}}</td>
+                                                    <td class="flexible-header">{{policyCertificateList.printedDate}}</td>
+                                                    <td class="flexible-header">{{policyCertificateList.withEffectFrom}}</td>
 
 
 
@@ -2797,33 +2797,11 @@
                                                             id="close"></button>
                                                         <h5 class="modal-title mt-2 mb-2" id="riskOtherDetailsLabel">
                                                             {{'gis.policy.select_certifiactes' | translate}}</h5>
-                                                        <!-- <div class="search-container mb-3">
-                                                                <span class="search-icon"><i class="fa fa-search"></i></span>
-                                                                <input type="text" placeholder="Search"
-                                                                    id="search-input-Rsection" [(ngModel)]="searchText" />
-                                                            </div> -->
+                                                       
 
-                                                        <!-- <div class="scrollable-list">
-                                                                <div *ngFor="let document of filteredRequiredDocs">
-                                                                    <div class="form-check"
-                                                                        *ngIf="matchesSearch(document.description)">
-                                                                        <input class="form-check-input" type="checkbox"
-                                                                            [id]="'checkbox-' + document.code"
-                                                                            [checked]="isSelected(document)"
-                                                                            (change)="onCheckboxChange(document)" />
-                                                                        <label class="form-check-label section-label"
-                                                                            [for]="'checkbox-' + document.code">
-                                                                            {{ document.shortDescription }}
-                                                                        </label>
-                                                                        <label class="form-check-label section-label"
-                                                                            [for]="'checkbox-' + document.code">
-                                                                            {{ document.description }}
-                                                                        </label>
-                                                                    </div>
-                                                                </div>
-                                                            </div> -->
-                                                        <p-table #dt4 [value]="requiredDocs"
-                                                            [(selection)]="selectedDocument" selectionMode="single"
+                                                      
+                                                        <p-table #dt4 [value]="certificatesList"
+                                                            [(selection)]="selectedCertificate" selectionMode="single"
                                                             dataKey="code" [paginator]="true" [rows]="10"
                                                             [scrollable]="true" scrollDirection="horizontal"
                                                             [showCurrentPageReport]="true"
@@ -2838,14 +2816,14 @@
 
                                                                 </tr>
                                                             </ng-template>
-                                                            <ng-template pTemplate="body" let-document
+                                                            <ng-template pTemplate="body" let-certificatesList
                                                                 let-ri="rowIndex">
-                                                                <tr [pSelectableRow]="document"
-                                                                    [class.p-highlight]="document === selectedDocument">
+                                                                <tr [pSelectableRow]="certificatesList"
+                                                                    [class.p-highlight]="certificatesList === selectedCertificate">
 
-                                                                    <td></td>
-                                                                    <td></td>
-                                                                    <td></td>
+                                                                    <td>{{certificatesList.certType}}</td>
+                                                                    <td>{{certificatesList.lotId}}</td>
+                                                                    <td>{{certificatesList.branch}}</td>
                                                                 </tr>
                                                             </ng-template>
                                                         </p-table>
@@ -2855,7 +2833,7 @@
                                                         <div class="mt-4 d-flex justify-content-end">
                                                             <button type="button" class="btn btn-primary "
                                                                 id="saveDetails" data-bs-dismiss="modal"
-                                                                (click)="createRiskSection()">
+                                                                (click)="addCertificates()">
                                                                 {{'gis.policy.save_details' | translate}}</button>
                                                         </div>
                                                     </div>
@@ -2876,7 +2854,7 @@
                                                             id="close"></button>
                                                         <h5 class="modal-title mt-2 mb-3 ms-4" id="editCertificates">
                                                             {{'gis.policy.certificate_details' | translate}}</h5>
-                                                        <form [formGroup]="scheduleDetailsForm">
+                                                        <form [formGroup]="addCertificatesForm">
                                                             <!-- **ROW 1** -->
                                                             <div class="row mb-1" id="sectionRows">
                                                                 <div class="col-xl-5">
@@ -2888,7 +2866,8 @@
                                                                     </div>
                                                                     <div class="row">
                                                                         <input type="text" id="sectionInput"
-                                                                            class="form-control form-control-sm mb-1 ms-2">
+                                                                            class="form-control form-control-sm mb-1 ms-2"
+                                                                            formControlName="certificateShortDescription">
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-xl-2"></div>
@@ -2901,7 +2880,7 @@
                                                                     <div class="row">
                                                                         <select
                                                                             class="form-select form-control-sm mb-1 ms-2"
-                                                                            id="selectedInput">
+                                                                            id="selectedInput" formControlName="status">
                                                                             <option value=""></option>
                                                                             <option value=""> {{'gis.policy.active' |
                                                                                 translate}}</option>
@@ -2923,7 +2902,8 @@
                                                                     </div>
                                                                     <div class="row">
                                                                         <input type="date" id="sectionInput"
-                                                                            class="form-control form-control-sm mb-1 ms-2">
+                                                                            class="form-control form-control-sm mb-1 ms-2"
+                                                                            formControlName="withEffectFrom">
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-xl-2"></div>
@@ -2935,7 +2915,8 @@
                                                                     </div>
                                                                     <div class="row">
                                                                         <input type="date" id="sectionInput"
-                                                                            class="form-control form-control-sm mb-1 ms-2">
+                                                                            class="form-control form-control-sm mb-1 ms-2"
+                                                                            formControlName="withEffectTo">
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -2943,7 +2924,7 @@
                                                         </form>
                                                         <div class="mt-4 d-flex justify-content-end">
                                                             <button type="button" class="btn btn-primary "
-                                                                id="saveDetails" data-bs-dismiss="modal">
+                                                                id="saveDetails" data-bs-dismiss="modal" (click)="editCertificates()">
                                                                 {{'gis.policy.save_details' | translate}}</button>
                                                         </div>
                                                     </div>
@@ -2962,8 +2943,8 @@
                                                         <div class="d-flex justify-content-center mb-3">
                                                             <button type="button" class="btn btn-primary px-5"
                                                                 id="delete"
-                                                                data-bs-dismiss="modal">{{'gis.policy.yes_delete' |
-                                                                translate}} </button>
+                                                                data-bs-dismiss="modal" (click)="deleteCertificates()">{{'gis.policy.yes_delete' |
+                                                                translate}}  </button>
                                                         </div>
                                                         <div class="d-flex justify-content-center mb-2">
                                                             <button type="button" class="btn btn-outline-primary px-5"
