--- a/src/app/features/lms/grp/components/claims/components/claim-processing/claim-processing.component.css
+++ b/src/app/features/lms/grp/components/claims/components/claim-processing/claim-processing.component.css
@@ -88,4 +88,15 @@
 td {
   white-space: nowrap;
 }
+
+.cvt-desc{
+  color: black;
+}
+
+.active-cover {
+  color: rgb(0, 115, 255);
+  text-decoration: underline;
+  cursor: pointer;
+}
+
   
